--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>CI/CD Deployment</title>
 </head>
 <body>
-    <h1>Deployed via Jenkins + Docker + Nginx 🚀</h1>
+    <h1>Deployed via Jenkins + Docker + Nginx </h1>
 </body>
 </html>
